--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.test</groupId>
     <artifactId>guava-test</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -21,6 +22,9 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>netty-test</module>
+    </modules>
 
     <repositories>
         <repository>
