add rocketmq test

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     </build>
     <modules>
         <module>netty-test</module>
+        <module>rocketmq-test</module>
     </modules>
 
     <repositories>
